; ModuleID = '/home/carl/AnghaBench/fastdfs/tracker/extr_tracker_nio.c_send_add_event.c'
source_filename = "/home/carl/AnghaBench/fastdfs/tracker/extr_tracker_nio.c_send_add_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fast_task_info = type { %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i32 }

@IOEVENT_WRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @send_add_event(%struct.fast_task_info* %0) #0 {
  %2 = alloca %struct.fast_task_info*, align 8
  store %struct.fast_task_info* %0, %struct.fast_task_info** %2, align 8
  %3 = load %struct.fast_task_info*, %struct.fast_task_info** %2, align 8
  %4 = getelementptr inbounds %struct.fast_task_info, %struct.fast_task_info* %3, i32 0, i32 1
  store i64 0, i64* %4, align 8
  %5 = load %struct.fast_task_info*, %struct.fast_task_info** %2, align 8
  %6 = getelementptr inbounds %struct.fast_task_info, %struct.fast_task_info* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load i32, i32* @IOEVENT_WRITE, align 4
  %10 = load %struct.fast_task_info*, %struct.fast_task_info** %2, align 8
  %11 = call i32 @client_sock_write(i32 %8, i32 %9, %struct.fast_task_info* %10)
  ret i32 0
}

declare dso_local i32 @client_sock_write(i32, i32, %struct.fast_task_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
